# cashubrew

./: .all-contributorsrc  .env.example  .gitignore  Dockerfile  LICENSE  README.md  install.sh  mix.exs
.github/workflows/: benchmark.yml  build-binaries.yml  ci.yml  release.yml
assets/: package-lock.json  package.json  tailwind.config.js
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: CONTRIBUTING.md
infra/: docker-compose.yml
integration-tests/: Cargo.toml  nut04.rs  nut05.rs  nut06.rs  rust-toolchain.toml
integration-tests/src/: lib.rs  main.rs
lib/: cashubrew.ex  gakimint.ex  gakimint_web.ex
lib/cashubrew/: application.ex
lib/cashubrew/core/: mint.ex  mint_verification.ex  post_swap_request.ex  token.ex  types.ex
lib/cashubrew/crypto/: bdhke.ex  random.ex  secp256k1_utils.ex
lib/cashubrew/db/: mock_repo.ex  repo.ex
lib/cashubrew/lightning/: lightning_network_service.ex  ln_bits.ex  ln_lib.ex  lnd_client.ex  lnd_rpc.pb.ex  lnrpc_client.ex  (+2 more)
lib/gakimint/: application.ex  bdhke_module.ex  crypto.ex  keyset.ex  mint.ex  repo.ex  router.ex
lib/gakimint_web/: endpoint.ex  gettext.ex  keys.ex  keyset_response.ex  router.ex  telemetry.ex
priv/repo/: seeds.exs
scripts/: protobuf.sh
test/: bdhke_test.exs  cashu_token_serde_test.exs  crypto_test.exs  gakimint_test.exs  integration_gakimint.exs  integration_mint.exs  mint_verification_test.exs  nut01_test.exs  nut02_test.exs  nut06_test.exs  test_mint_verification.exs
test/mint/: mint_test.exs  swap_test.exs
test/support/: conn_case.ex
(+108 files in other folders)
