[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cdk = { git = "https://github.com/cashubtc/cdk", tag = "v0.4.0" }
rand = "0.8.5"
assert_matches = "1.5.0"
tokio = "1.41.0"
url = "2.5.2"
secp256k1 = {version = "0.30.0", features = ["rand", "hashes", "global-context"]}

[[test]]
name = "nut06"
path = "nut06.rs"

