[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
cdk = { git = "https://github.com/cashubtc/cdk", tag = "v0.4.0" }
rand = "0.8.5"
assert_matches = "1.5.0"
tokio = "1.41.0"
uuid = "1.11.0"
anyhow = "1.0.91"
bitcoind = { version = "0.34.2", features = ["26_0"] }
lnd = { version = "0.1.6", features = ["lnd_0_17_5"] }
tonic_lnd = "0.5.1"
ctrlc = "3.4"
lightning-invoice = { version = "0.32.0" }

[[test]]
name = "nut04"
path = "nut04.rs"

[[test]]
name = "nut05"
path = "nut05.rs"

[[test]]
name = "nut06"
path = "nut06.rs"
